welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:3: error: identifier expected but '=' found.
var vuBiscuit: = false; estSurBiscuit() match 
               ^Program:4: error: '{' expected but 'case' found.
case yes => vuBiscuit
^