welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {var vuBiscuit: = false; estSurBiscuit() match 
case yes => vuBiscuit
}
